mpdscribble 0.20 - not yet released
  * curl: implement libCURL timeouts
  * curl: prevent recursive read calls


mpdscribble 0.19 - 2009-12-26
  * using libmpdclient 2.0 instead of built-in libmpdclient


mpdscribble 0.18.1 - 2009-08-29
  * soup: explicitly link with libgthread
  * curl: use curl_escape() on GLib < 2.16
  * journal: don't warn if journal file is missing
  * use g_strerror() instead of strerror()


mpdscribble 0.18 - 2009-07-08
  * improved detection of repeated songs
  * support MPD's new MusicBrainz tags
  * CURL can be used instead of libsoup at compile time
  * removed the command line options --cache, --cache-interval, --sleep
  * support multiple scrobbler services (such as libre.fm)
  * schedule "now playing" after successful handshake
  * default to syslog
  * "cache" renamed to "journal" (optional now)
  * deprecated the "sleep" option


mpdscribble 0.17 - 2009-03-02
  * secure permissions for mpdscribble.conf
  * added "daemon_user" configuration option
  * escape '&'
  * import AS protocol v1.1 timestamps
  * support logging to stderr
  * add win32 support


mpdscribble 0.16 - 2009-01-17
  * support repeating a song
  * fix MPD 0.13 support (without "idle")
  * added pidfile support
  * daemonize mpdscribble by default, added option --no-daemon
  * moved debugging messages to verbose 3
  * changed default verbose level to 1
  * fix default value for "sleep"


mpdscribble 0.15 - 2009-01-04
  * re-enter idle mode if MPD is paused (fixes high CPU usage)
  * log with local time stamp
  * allow configuring the cleartext last.fm password


mpdscribble 0.14 - 2008-12-25
  * reformatted the whole source code (indentation with tabs)
  * support MPD's "idle" command (ignores the "sleep" setting)
  * resubmit "now playing" after re-handshake
  * turn off buffering for the log file
  * logging to syslog


mpdscribble 0.13 - 2008-12-19
  * libmpdclient update from upstream:
    - suport for Unix domain sockets